# Audio-Plugin-Template

./: .gitignore  CMakeLists.txt  README.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/UTILS/: ParameterInfo.cpp  ParameterInfo.h  Ramp.h
